Updated so videos are no longer way too tall

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -393,7 +393,8 @@ a.twitter-link:hover {
   font-weight: bold;
 }
 
-.hero-img-container {
+.hero-img-container,
+.video-comp-container {
   margin: auto;
   width: 100%;
   height: 100%;
@@ -401,11 +402,20 @@ a.twitter-link:hover {
   margin-top: 8px;
 }
 
-.hero-img {
+.hero-img,
+.video {
   width: 100%;
   height: auto;
   z-index: 100;
   border-radius: 2px;
+}
+
+.video-comp-container {
+  background-color: black;
+}
+
+.video {
+  max-height: 600px;
 }
 
 .video-container {
